--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 ---
 layout: null
-title: Jekyll Theme - Home Page - Massively
 description: Every great website starts with a great homepage. The homepage tells your viewers what your site is all about and gives your viewers a place to come back to.
 sitemap:
     priority: 1.0
@@ -27,17 +26,19 @@ sitemap:
 				
 				<!-- Intro -->
 					<div id="intro">
-            			<!-- <h1>{{site.title}}</h1>
-						<h2>The Jekyll Theme Version</h2>
-						<p>Massively is an HTML5 website theme designed by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
-						and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>. Jekyll integration by <a href="https://somiibo.com">Somiibo</a></p>
-						<ul class="actions">
-							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
-						</ul> -->
 						<h1>{{site.data.profile.name}}</h1>
 						<h2>{{site.data.profile.short-description}}</h2>
-						<p>{{site.data.profile.description}}</p>
-						
+						<p>
+							{{site.data.profile.description}}
+							{% if site.data.profile.position-name != ""
+							   and site.data.profile.current-company-name != "" 
+							   and site.data.profile.current-company-website != "" %}
+								Currently a {{site.data.profile.current-position-name}} @ 
+								<a href="{{site.data.profile.current-company-website}}" target="_blank" rel="nofollow">
+									{{site.data.profile.current-company-name}}
+								</a>
+							{% endif %}
+						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -45,7 +46,7 @@ sitemap:
 
 				<!-- Header -->
 					<header id="header">
-						<a href="{{ "/" | absolute_url }}" class="logo">{{site.title}}</a>
+						<a href="{{ "/" | absolute_url }}" class="logo">{{site.data.profile.name}}</a>
 					</header>
 
 				<!-- Nav -->
@@ -103,14 +104,6 @@ sitemap:
                 {% endfor %}
 
 							</section>
-
-						<!-- Footer -->
-							<footer>
-                <ul class="actions">
-                  <li><a href="{{ "/blog/" | absolute_url }}" class="button">Our Blog</a></li>
-                </ul>
-							</footer>
-
 					</div>
 
 				<!-- Footer -->
